{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 166,
  "lineage": "2e9587e3-f6ad-daeb-3f2c-433980af74ef",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "RTR-LON-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "RTR-NA-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "RTR-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "RTR-LON-NIC-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "RTR-NA-NIC-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "RTR-NIC-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "LON-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/networkSecurityGroups/LON-Sec-Group",
            "location": "eastus",
            "name": "LON-Sec-Group",
            "resource_group_name": "MSSA-Demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "141.157.11.245/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Network-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/networkSecurityGroups/Network-Sec-Group",
            "location": "eastus",
            "name": "Network-Sec-Group",
            "resource_group_name": "MSSA-Demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "141.157.11.245/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "RTR-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/networkSecurityGroups/RTR-Sec-Group",
            "location": "eastus",
            "name": "RTR-Sec-Group",
            "resource_group_name": "MSSA-Demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "141.157.11.245/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "RTR-Network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/publicIPAddresses/RTR-Pub-Network",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "RTR-Pub-Network",
            "resource_group_name": "MSSA-Demo",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "LON-Subnet-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NA-Subnet-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "RTR-Subnet-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Demo-Network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/26"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9fc76e42-6357-4c4c-bb66-a277f76ac4be",
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/virtualNetworks/Demo-Network",
            "location": "eastus",
            "name": "Demo-Network",
            "resource_group_name": "MSSA-Demo"
          },
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "LON-Network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.1.0/26"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fe4a01ab-17a3-4b50-8713-183ec1ca2a8c",
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/virtualNetworks/LON-Network",
            "location": "eastus",
            "name": "LON-Network",
            "resource_group_name": "MSSA-Demo"
          },
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "RTR-Network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/26"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "be74b7d0-e7d4-4cd6-b76c-e0bebb7520a5",
            "id": "/subscriptions/4855a2c4-7d23-4b36-a898-4e03e7b907f6/resourceGroups/MSSA-Demo/providers/Microsoft.Network/virtualNetworks/RTR-Network",
            "location": "eastus",
            "name": "RTR-Network",
            "resource_group_name": "MSSA-Demo"
          },
          "dependencies": [
            "azurerm_resource_group.Demo-RG"
          ]
        }
      ]
    }
  ]
}